test/parser/positive/PublicConstructors.java
public class PublicConstructors {
  public PublicConstructors() {}
}
