test/parser/negative/OmittedConstructor.java
  public class OmittedConstructor {
    /* public A() {} */
  }
